--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.5.2",
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-json-table": "^0.1.1",
+    "react-scripts": "1.1.5",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
